got map tiles endpoint working
