# System_BE/src/Routers/NavRouter.ts
@@ -1,10 +1,8 @@
 import { Router } from 'websocket-express';
 import { checkSchema, matchedData, validationResult } from 'express-validator';
 import ILocation from '../Types/ILocation';
-import LocationSchema from '../Express-Validation Schemas/Location';
 import NavigationSystem from '../TSObjects/NavigationSystem';
-import { encode } from '../Functions/geohasher';
-import { promisify } from 'util';
+import LocationPlusZoomSchema from '../Express-Validation Schemas/LocationPlusZoom';
 
 const navRouter = new Router();
 //initialize all objects needed by the router once to be used for the duration of the server
@@ -13,12 +11,13 @@ const navigationSystem: NavigationSystem = new NavigationSystem();
 /*
  * function to get the map
  * @param location: the location of the user
+ * @param zoom: number indicating the zoom level of the map
  * @return: map with amenities
  */
 navRouter.post("/map", async (req, res) => {
-  /* #swagger.parameters['location'] = { in: 'body', name: 'location', description: 'send the location of the user', required: true, schema: {$ref: "#/components/schemas/location"} } */
+  /* #swagger.parameters['location'] = { in: 'body', name: 'location', description: 'send the location of the user', required: true, schema: {$ref: "#/components/schemas/locationWithZoom"} } */
   //https://docs.mapbox.com/api/navigation/http-post/
-  await checkSchema(LocationSchema).run(req);
+  await checkSchema(LocationPlusZoomSchema).run(req);
   const error = validationResult(req);
 
   if (!error.isEmpty()) {
@@ -29,11 +28,10 @@ navRouter.post("/map", async (req, res) => {
 
   //store the data corresponding to the item to delete
   const data: any = matchedData(req); 
-  const location: ILocation = {x: data.locationX, y: data.locationY};
-  const map: any = await fetch(process.env.DFW_MAP_URL ?? "", {},).then((res) => res.text()).catch((e) => console.log(e))
-
-  const encodedLatLong: string = encode(Number.parseFloat(location.x), Number.parseFloat(location.y), 1);
-  res.json({map: map, encodedLatLong: encodedLatLong});
+  const location: ILocation = {x: data.x, y: data.y};
+  const zoom: number = data.zoom;
+  const map: any = await navigationSystem.getMap(location, zoom);
+  res.json({map: map});
 })
 
 /*
